fix(content-switcher): improve low contrast and icon only styles

--- a/packages/web-components/src/components/content-switcher/content-switcher.scss
+++ b/packages/web-components/src/components/content-switcher/content-switcher.scss
@@ -42,7 +42,7 @@ $css--plex: true !default;
     align-items: center;
     padding: $spacing-03 var(--cds-layout-density-padding-inline-local);
     block-size: 100%;
-    color: var(--cds-text-primary, #161616);
+    color: $text-secondary;
     inline-size: 100%;
 
     &:first-child,
@@ -63,9 +63,13 @@ $css--plex: true !default;
       inset-inline-start: 0;
     }
 
+    &:hover {
+      color: $text-primary;
+    }
+
     &.#{$prefix}--content-switcher--selected {
       border: 0;
-      color: var(--cds-text-inverse, #ffffff);
+      color: $text-inverse;
     }
 
     &.#{$prefix}--content-switcher--selected,
@@ -81,38 +85,6 @@ $css--plex: true !default;
       border-block-start-color: $border-inverse;
     }
   }
-}
-
-:host(#{$prefix}-content-switcher-item[icon]) {
-  inline-size: initial;
-
-  .#{$prefix}--content-switcher__label {
-    display: flex;
-    align-items: center;
-  }
-}
-
-:host(#{$prefix}-content-switcher-item[icon][size='sm'])
-  .#{$prefix}--content-switcher-btn {
-  block-size: var(--cds-layout-size-height-local);
-  padding-inline: rem(8px);
-}
-
-:host(#{$prefix}-content-switcher-item[icon][size='md'])
-  .#{$prefix}--content-switcher-btn {
-  block-size: $spacing-08;
-  padding-inline: rem(12px);
-}
-
-:host(#{$prefix}-content-switcher-item[icon][size='lg'])
-  .#{$prefix}--content-switcher-btn {
-  block-size: $spacing-09;
-  padding-inline: rem(14px);
-}
-
-:host(#{$prefix}-content-switcher-item[hide-divider])
-  .#{$prefix}--content-switcher-btn::before {
-  background-color: transparent;
 }
 
 :host(#{$prefix}-content-switcher-item:first-of-type)
@@ -142,9 +114,55 @@ $css--plex: true !default;
   background-color: transparent;
 }
 
+:host(#{$prefix}-content-switcher-item[hide-divider])
+  .#{$prefix}--content-switcher-btn::before {
+  background-color: transparent;
+}
+
+:host(#{$prefix}-content-switcher-item[icon]) {
+  inline-size: initial;
+
+  .#{$prefix}--content-switcher__label {
+    display: flex;
+    align-items: center;
+  }
+}
+
+:host(#{$prefix}-content-switcher-item[icon][size='sm'])
+  .#{$prefix}--content-switcher-btn {
+  block-size: var(--cds-layout-size-height-local);
+  padding-inline: rem(8px);
+}
+
+:host(#{$prefix}-content-switcher-item[icon][size='md'])
+  .#{$prefix}--content-switcher-btn {
+  block-size: $spacing-08;
+  padding-inline: rem(12px);
+}
+
+:host(#{$prefix}-content-switcher-item[icon][size='lg'])
+  .#{$prefix}--content-switcher-btn {
+  block-size: $spacing-09;
+  padding-inline: rem(14px);
+}
+
+:host([icon]:not([lowcontrast])) ::slotted(svg) {
+  fill: $icon-primary;
+}
+
+:host([icon]:not([lowcontrast])[selected]) ::slotted(svg) {
+  fill: $icon-inverse;
+}
+
+:host([icon]:not([lowcontrast])[disabled]) ::slotted(svg) {
+  fill: $icon-disabled;
+}
+
 //LOW CONTRAST
 :host([lowcontrast]) {
   @extend .#{$prefix}--content-switcher--low-contrast;
+
+  border-radius: rem(4px);
 
   // First item (only in low contrast)
   &:host(#{$prefix}-content-switcher-item:first-of-type)
